Terraform/rds.tf

resource "aws_db_subnet_group" "main" {
  name = "aeronexus-db-subnet"

  subnet_ids = [
    aws_subnet.private.id,
    aws_subnet.private_db_2.id
  ]

  tags = {
    Name = "aeronexus-db-subnet"
  }
}
resource "aws_db_instance" "postgres" {

  identifier = "${var.project_name}-db"

  engine         = "postgres"
  engine_version = "16"

  instance_class = "db.t3.micro"

  allocated_storage = 20

  db_name = var.db_name

  username = var.db_username
  password = var.db_password

  db_subnet_group_name = aws_db_subnet_group.main.name

  vpc_security_group_ids = [
    aws_security_group.rds_sg.id
  ]

  publicly_accessible = false

  skip_final_snapshot = true

}
